# backend/app.js
@@ -16,6 +16,7 @@ const app = express();
 const authRoute = require('./routes/auth-routes');
 const productRoute = require('./routes/product-routes');
 const addressRoute = require('./routes/address-routes');
+const cartRoute = require('./routes/cart-routes');
 
 app.use(cors());
 app.use(express.json());
@@ -33,6 +34,7 @@ app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use('/uploads',express.static('uploads'));
 app.use('/auth',authRoute);
 app.use('/product',productRoute);
+app.use('/cart',cartRoute);
 app.use('/address',addressRoute);
 
 // swaggerSetup(app);
