# backend/model/cart-model.js
@@ -1,0 +1,33 @@
+const mongoose = require('mongoose');
+
+const cartSchema = mongoose.Schema({
+    user:{
+        type:mongoose.Schema.Types.ObjectId,
+        ref:"User",
+        required: true
+    },
+    products:[
+        {
+            product:{
+                type:mongoose.Schema.Types.ObjectId,
+                ref:"Products",
+                required: true
+            },
+            quantity: {
+                type:Number,
+                required: true,
+                default: 1
+            }
+        }
+    ],
+    totalAmount:{
+        type:Number,
+        required:true
+    },
+    createdAt:{
+        type:Date,
+        default:Date.now
+    }
+});
+
+module.exports = mongoose.model('CartItems',cartSchema);
