# backend/swagger.yaml
@@ -100,6 +100,42 @@ components:
         stock:
           type: number
           example: 5
+    ProductItem:
+      type: object
+      properties:
+        product:
+          type: string
+          example: "123456789"
+        quantity:
+          type: number
+          example: 2
+        _id:
+          type: string
+          example: "123456789"
+    Cart:
+      type: object
+      properties:
+        _id:
+          type: string
+          example: "123345677"
+        user:
+          type: string
+          example: "1223456778964"
+        products:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProductItem'
+        totalAmount:
+          type: number
+          example: 999
+    AddToCartResp:
+      type: object
+      properties:
+        message:
+          type: string
+          example: "Product added to a cart"
+        cart:
+          $ref: '#/components/schemas/Cart'
 
 
 paths:
@@ -292,6 +328,50 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Product'
+  /cart:
+    get:
+      summary: Get specific product
+      tags:
+        - Add to cart
+      description: Retrieves cart items for the authenticated user
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of items present in cart
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Address'
+  /cart/add:
+    post:
+      summary: add product in a cart
+      tags:
+        - Add to cart
+      description: Add a product in a cart
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - product
+              properties:
+                product:
+                  type: string
+                  example: "1234567890"
+      responses:
+        '200':
+          description: Product added to cart successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddToCartResp'
   /address/add:
     post:
       summary: Add a new address
